# NeuroLang

./: .Jenkinsfile  .buildinfo  .codacy.yml  .codespellrc  .coveragerc  .gitattributes  .gitignore  .prospector.yaml  .pydocstyle  .style.yapf  105923.L.pial.32k_fs_LR.surf.gii  111514.L.aparc.a2009s.32k_fs_LR.label.gii  111514.L.pial.32k_fs_LR.surf.gii  AGENTS.md  ANALYSIS_SUMMARY.md  AUTHORS.rst  Atlas regions overlaps.ipynb  Dominant_relationship_cs_prcs_RH_making_nl_dominant_regions.ipynb  Jenkinsfile  Jenkinsfile_dis  LH_from_primary_sulci.ipynb  LH_from_primary_sulci_UPDATED.ipynb  LH_from_primary_sulci_UPDATED_manual_marking.ipynb  LICENSE  MANIFEST.in  Makefile  Neurolang_general_LH.ipynb  Neurolang_general_LH.py  PROBABILISTIC_FACTS_INDEX.md  PROBABILISTIC_FACTS_QUICK_REFERENCE.md  PROBABILISTIC_FACTS_TEST_EXAMPLES.md  README.md  VAL-PROB-contracts.md  WEIGHTED_PROBABILISTIC_FACTS_REPORT.md  api.html  asv.conf.json  authors.html  benchmark_ras_backends.py  changelog.html  concepts.html  (+32 more)
.circleci/: config.yml
.factory/: init.sh  services.yaml
.github/workflows/: benchmarks.yml  build_gh_pages.yml  codespell.yml  deploy-gh-pages.yml  docs.yml  publish.yml  python-linters.yml  pythonpackage.yml  stale.yml  tests.yml  trigger_neurolang.yml
.omo/run-continuation/: ses_1404fee67ffeYsFT34rGq5TBLk.json  ses_1b1112621ffergjZJGvZ6jccFh.json
.sisyphus/run-continuation/: ses_1b9e2fa5bffe1X85hdrTo3Pu77.json  ses_1bdc1dd14ffebO3fN9FxVZ8QXC.json  ses_1fefa1114ffeYqRyguAqcyF2lE.json
_downloads/3c3b6f72839a4fa32126048dfee58ac2/: plot_neurosynth_implementation.ipynb
_downloads/4dce24470ce509ed4160268b2ec14c7c/: plot_load_destrieux_left_hemisphere_gyri.ipynb
_downloads/5837271e249bd7da42962ad550467b02/: plot_load_destrieux_datalog_ir.ipynb
_downloads/f258d96c7cb6e0a234bd7b8b519421eb/: plot_cbma_spatial_prior.ipynb
_sources/: api.rst.txt  concepts.rst.txt  contributing.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: index.rst.txt  plot_cbma_spatial_prior.rst.txt  plot_load_destrieux_datalog_ir.rst.txt  plot_load_destrieux_left_hemisphere_gyri.rst.txt  plot_neurosynth_implementation.rst.txt  sg_execution_times.rst.txt
_sources/gen_api/: neurolang.NeurolangDL.rst.txt  neurolang.NeurolangPDL.rst.txt  neurolang.datalog.rst.txt  neurolang.exceptions.rst.txt  neurolang.expression_pattern_matching.rst.txt  neurolang.expression_walker.rst.txt  (+5 more)
_static/: documentation_options.js  neurolang.css
auto_examples/: index.html  plot_cbma_spatial_prior.html  plot_load_destrieux_datalog_ir.html  plot_load_destrieux_left_hemisphere_gyri.html  plot_neurosynth_implementation.html  sg_execution_times.html
benchmarks/: chase.py  datalog_frontend.py  ras_operations.py  regions.py  relational_algebra_set.py
deprecated_examples/: plot_set_type_example.py  query_regions_draft.ipynb
doc/: Makefile  SQUALL_REVIEW.md  api.rst  changelog.rst  concepts.rst  conf.py  contributing.rst  engine_configuration.rst  foreword.rst  index.rst  install.rst  install_doc_component.html  installation.rst  license.rst  sg_execution_times.rst  tutorial.rst  tutorial_datalog.rst  tutorial_logic_programming.rst  tutorial_squall.rst
examples/: 102311.L.manual_drawings.func.gii  102311.L.pial.32k_fs_LR.surf.gii  6_subjects_LH_Central_variance.ipynb  6_subjects_LH_Paracingulate_variance.ipynb  6_subjects_RH_Central_variance.ipynb  6_subjects_RH_Paracingulate_variance.ipynb  LH_from_primary_sulci_UPDATED.ipynb  LH_from_primary_sulci_UPDATED_manual_marking.ipynb  Network example.ipynb  Neurolang_general_LH.ipynb  OWL Parser test.ipynb  Open World tests.ipynb  Problem_sulci_107321_L.ipynb  Queries per sulcus and hierarchy_108525_LH.ipynb  Queries per sulcus and hierarchy_108525_LH_with_PLANES.ipynb  Queries per sulcus and hierarchy_108525_RH_with_PLANES.ipynb  Query on all left hemispheres at once.ipynb  Query on all right hemispheres at once.ipynb  README.txt  RH_from_primary_sulci_UPDATED.ipynb  Testing_tolerance_101309_RH.ipynb  __init__.py  example_fma_ontology.ipynb  example_fma_ontology_demian.ipynb  general_notebook.py  general_notebook_plotting.py  general_notebook_queries.py  neuroLang_query_examples_destrieux_atlas-neurosynth.ipynb  neuroLang_query_examples_destrieux_atlas.ipynb  neurosynth.py  plot_cbma_region_based_reverse_inference.py  plot_cbma_spatial_prior.py  plot_destrieux_filter_neurofma.py  plot_destrieux_queries.py  plot_general_notebook.py  plot_load_destrieux.py  plot_load_destrieux_datalog_ir.py  plot_load_destrieux_left_hemisphere_gyri.py  plot_meta_analysis_coactivation_networks.py  plot_neurolang_datalog_example.py  (+24 more)
experiments/: README.rst  __init__.py  plot_hyesang_etal_submitted.py
gen_api/: neurolang.NeurolangDL.html  neurolang.NeurolangPDL.html  neurolang.datalog.html  neurolang.exceptions.html  neurolang.expression_pattern_matching.html  neurolang.expression_walker.html  neurolang.expressions.html  neurolang.logic.html  neurolang.probabilistic.html  neurolang.relational_algebra.html  neurolang.relational_algebra_provenance.html
neurolang/: CD_relations.py  RCD_relations.py  __init__.py  _version.py  _version.pya  _version_scm.py  aabb_tree.py  ast.py  ast_tatsu.py  brain_tree.py  commands.py  convet_snrf_to_datalog.py  datalog_chase.py  datalog_chase_existential.py  datalog_chase_negation.py  datalog_magic_sets.py  datalog_negation_chase.py  datalog_walkers.py  deprecated.py  exceptions.py  existential_datalog.py  expression_pattern_matching.py  expression_walker.py  expressions.py  free_variable_evaluation.py  generative_datalog.py  graphical_model.py  interval_algebra.py  lazy_code.py  logic_normal_form_walkers.py  neurolang.py  neurolang_compiler.py  perior_tree.py  rap_to_latex.py  region_solver.py  region_solver_ds.py  regions.py  relational_algebra.py  relational_algebra_provenance.py  solver.py  (+14 more)
ontology_test/: fma_ontolgy_utils.py  mesh_test.ipynb  neurosynth_test.ipynb  parsing_fma_ontology.ipynb
results/: benchmarks.json
scratch/: ns_implementation.ipynb
scratch_notebooks/: Test regions with Datalog semantics.ipynb
scripts/: gifti_to_obj.py
(+637 files in other folders)
