[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "neurolang"
dynamic = ["version"]
description = "NeuroLang: Probabilistic Logic Programming for NeuroScience Research"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]

keywords = [
    "logic programming",
    "probabilistic logic programming",
    "open world",
    "ontology",
    "neuroscience",
    "neuroimaging",
    "datalog",
]

dependencies = [
    "numpy",
    "scipy",
    "nibabel>=5.0.0",
    "nilearn>=0.10.0",
    "pandas>=1.5",
    "pysdd",
    "lark>=1.1.2",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "typing_inspect",
    "rdflib>=6.0.0",
    "sqlalchemy>=1.4"
]

[project.urls]
Homepage = "https://neurolang.github.io"
"Bug Tracker" = "https://github.com/neurolang/neurolang/issues"
"Source Code" = "https://github.com/neurolang/neurolang"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-benchmark",
    "pytest-cov",
    "tornado>=6.5.5",
    "pyyaml>=6.0.3",
    "problog"
]

doc = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
    "sphinx-design>=0.5",
    "sphinx-gallery",
    "numpydoc"
]

server = [
    "tornado>=6.5.5",
    "pyyaml>=6.0.3"
]

[project.scripts]
neuro-server = "neurolang.utils.server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["neurolang"]
artifacts = [
    "neurolang/utils/server/neurolang-web/dist/**",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "neurolang/_version_scm.py"

[tool.pytest.ini_options]
norecursedirs = [".git", "_build", "tmp*", "scratch*", "deprecated*"]
addopts = "--doctest-glob=doc/tutorial_squall.rst"

[tool.coverage.run]
omit = [
    "*/test_*",
    "neurolang/deprecated",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
]

[tool.black]
"line-length" = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = false
force_grid_wrap = 0
use_parentheses = true
line_length = 79
combine_as_imports = true

[tool.codespell]
ignore-words-list = "anc"
