[metadata]
name = neurolang
description = "NeuroLang: Probabilistic Logic Programming for NeuroScience Research"
long_description = file: README.md
long-description-content-type = text/markdown
version = 0.0.1
url = https://neurolang.github.io
project_urls =
    Bug Tracker = https://github.com/neurolang/neurolang/issues
    Source Code = https://github.com/neurolang/neurolang
license = BSD 3
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Science/Research
  License :: OSI Approved
  Operating System :: OS Independent
  Programming Language :: Python
  Topic :: Scientific/Engineering
keywords =
  logic programming
  probabilistic logic programming
  open world
  ontology
  neuroscience
  neuroimaging
  datalog

[options]
python_requires = >=3.6

install_requires =
  numpy
  scipy
  nibabel
  nilearn>=0.5.0
  pandas>=0.23.4,<1.2.0
  pysdd @ git+https://github.com/wannesm/PySDD.git#egg=PySDD
  tatsu
  neurosynth==0.3.7
  scikit-learn<0.24
  matplotlib
  typing_inspect
  rdflib<6.0.0
  sqlalchemy

setup_requires =
  setuptools_scm
  importlib_metadata

[options.extras_require]
dev =
  codacy-coverage
  pytest
  pytest-benchmark
  pytest-cov
  problog
  versioneer
  dask-sql @ git+https://github.com/NeuroLang/dask-sql.git@various_changes#egg=dask-sql
  tornado
  pyyaml

doc =
  sphinx
  sphinx_bootstrap_theme
  sphinx-gallery
  numpydoc

dask =
  dask-sql @ git+https://github.com/NeuroLang/dask-sql.git@various_changes#egg=dask-sql

server =
  tornado
  pyyaml

[options.data_files]
config = neurolang/config/config.ini

[options.entry_points]
console_scripts=
  neuro-server = neurolang.utils.server.app:main

[versioneer]
VCS = git
style = pep440
versionfile_source = neurolang/_version.pya
versionfile_build = neurolang/_version.py
tag_prefix =
parentdir_prefix = neurolang-
