[metadata]
name = neurolang
description = "NeuroLang: Probabilistic Logic Programming for NeuroScience Research"
long_description = file: README.md
long-description-content-type = text/markdown
version = 0.0.1
url = https://neurolang.github.io
project_urls =
    Bug Tracker = https://github.com/neurolang/neurolang/issues
    Source Code = https://github.com/neurolang/neurolang
license = BSD 3
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Science/Research
  License :: OSI Approved
  Operating System :: OS Independent
  Programming Language :: Python
  Topic :: Scientific/Engineering
keywords =
  logic programming
  probabilistic logic programming
  open world
  ontology
  neuroscience
  neuroimaging
  datalog

[options]
python_requires = >=3.7

install_requires =
  numpy
  scipy
  nibabel
  nilearn>=0.5.0,<0.9.0
  pandas>=1.3.5
  pysdd @ git+https://github.com/wannesm/PySDD.git#egg=PySDD
  tatsu<=4.4.0
  scikit-learn
  matplotlib
  seaborn
  typing_inspect
  rdflib>=6.0.0
  sqlalchemy
  pyparsing<3.0.5
  lark>=1.1.2
  nltk>=3.7

setup_requires =
  setuptools_scm
  importlib_metadata

[options.extras_require]
dev =
  codacy-coverage
  pytest<=6.2.5
  pytest-benchmark
  pytest-cov
  problog
  versioneer
  dask-sql @ git+https://github.com/NeuroLang/dask-sql.git@various_changes#egg=dask-sql
  tornado
  pyyaml

doc =
  sphinx>=4.2.0
  sphinx_bootstrap_theme
  sphinx-gallery
  numpydoc<1.2.0

dask =
  dask-sql @ git+https://github.com/NeuroLang/dask-sql.git@various_changes#egg=dask-sql

server =
  tornado
  pyyaml

[options.data_files]
config = neurolang/config/config.ini
queries = neurolang/utils/server/queries.yaml

[options.package_data]
neurolang = utils/server/neurolang-web/dist/*, utils/server/neurolang-web/dist/**/*

[options.entry_points]
console_scripts=
  neuro-server = neurolang.utils.server.app:main

[versioneer]
VCS = git
style = pep440
versionfile_source = neurolang/_version.pya
versionfile_build = neurolang/_version.py
tag_prefix =
parentdir_prefix = neurolang-
